--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -5,6 +5,7 @@
     justify-content: center;
     margin: 20px 0 100px;
     align-items: center;
+    
 
 }
 
@@ -18,6 +19,7 @@
     justify-content: center;
     padding: 16px;
     margin-top: 20px;
+    border-radius: 4px;
 }
 
 .contact__container > p{
@@ -27,10 +29,10 @@
 }
 
 .contact__container > p > span{
-    color: red;
+    color: #e74c3c;
 }
 .contact__icons > a > button > span > .MuiSvgIcon-root{
-    color: white;
+    color: #fff;
     font-size: 30px;
 
 }
