--- a/src/components/ProjectContainer/Project/Project.css
+++ b/src/components/ProjectContainer/Project/Project.css
@@ -7,15 +7,15 @@
     margin: 15px;
     width: 300px;
     height: 170px;
-    transition: transform 100ms ease-in;
+    transition: transform 250ms ease-in;
 }
 
 .project:hover{
     color: white;
-    background-color: red;
+    background: lightgoldenrodyellow;
     transform: scale(1.05);
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
     cursor: pointer;
 }
@@ -26,6 +26,7 @@
 
 .project__content > h4 {
     padding-bottom: 5px;
+    
 }
 
 .project__content > p{
